SDD2: shifted anchors so they don't fall behind the fixed header

--- a/main.css
+++ b/main.css
@@ -15,10 +15,11 @@ body {
 .header {
     position: fixed;
     text-align: center;
+    font-size: 14pt;
     width: 100%;
     padding: 10px 10px;
     background: #FDBD35;
-/*    color: #f1f1f1;*/
+    /*    color: #f1f1f1;*/
 }
 
 .content {
